# unisic-studio

./: .To-Do.txt.kate-swp  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  To-Do.txt
.claude/skills/perf-audit/: SKILL.md
.claude/skills/ponytail-perf-audit/: SKILL.md
docs/: NEXT-screen-studio-feel.md
docs/perf/: ponytail-audit-01.md
docs/screenshots/: README.md
i18n/: studio_en.ts
packaging/: unisic-studio.spec
packaging/arch/: PKGBUILD
packaging/deb/: postinst  postrm
packaging/mime/: app.unisic.UnisicStudio.xml
qml/: EditorWindow.qml  ExportDialog.qml  InspectorPanel.qml  RecordingHud.qml  SettingsPage.qml  SmokeTestDialog.qml  StudioMain.qml  StudioResizeGrips.qml  StudioTitleBar.qml  Timeline.qml  ZoomRectEditor.qml
qml/composition/: CompositionRoot.qml  CursorOverlay.qml  PreviewVideo.qml
resources/: app.unisic.UnisicStudio.desktop  app.unisic.UnisicStudio.metainfo.xml
resources/cursors/: ASSETS-PROVENANCE.md
scripts/: test-all.sh
src/: AutozoomSelfTest.cpp  AutozoomSelfTest.h  CursorPlayback.cpp  CursorPlayback.h  EditorWindowManager.cpp  EditorWindowManager.h  HudManager.cpp  HudManager.h  MotionSelfTest.cpp  MotionSelfTest.h  PreviewController.cpp  PreviewController.h  RecentProjects.cpp  RecentProjects.h  StudioApp.cpp  StudioApp.h  StudioSettings.cpp  StudioSettings.h  main.cpp
src/capture/: ClickCapture.cpp  ClickCapture.h  InputPermission.cpp  InputPermission.h  RecorderMath.h  RecordingAssembler.cpp  RecordingAssembler.h  StudioRecorder.cpp  StudioRecorder.h
src/engine/: CursorSmoother.cpp  CursorSmoother.h  Easing.h  KeyframeEngine.cpp  KeyframeEngine.h  TrajectoryMetrics.cpp  TrajectoryMetrics.h
src/media/: PosterExtractor.cpp  PosterExtractor.h  VideoProbe.cpp  VideoProbe.h
src/project/: ClickTrack.cpp  ClickTrack.h  CursorTrack.cpp  CursorTrack.h  StudioProject.cpp  StudioProject.h  StyleModel.cpp  StyleModel.h  ZoomTimeline.cpp  ZoomTimeline.h
src/render/: CursorShapeProvider.cpp  CursorShapeProvider.h  ExportController.cpp  ExportController.h  FrameDecoder.cpp  FrameDecoder.h  RenderPipeline.cpp  RenderPipeline.h  VideoFrameItem.cpp  VideoFrameItem.h
tests/: ClickTrackTest.cpp  CursorPlaybackTest.cpp  CursorSmootherTest.cpp  CursorTrackTest.cpp  KeyframeEngineTest.cpp  PreviewControllerTest.cpp  RecentProjectsTest.cpp  RecorderMathTest.cpp  StudioProjectTest.cpp  TrajectoryMetricsTest.cpp  ZoomTimelineTest.cpp
